fix: fix pre element overflow

--- a/src/styles/prism-vsc-dark-plus.css
+++ b/src/styles/prism-vsc-dark-plus.css
@@ -37,7 +37,7 @@ code[class*="language-"] *::selection {
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
-	overflow: auto;
+	overflow: hidden;
 	background: #1e1e1e;
 }
 
